--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 	--blur: 10px;
 	--black: #202020;
 	--white: #dedede;
-	--sand: #ffd245;
+	--sand: #ffd145;
 	--dark-brown: #a42d10;
 }
 
@@ -47,7 +47,7 @@ body {
 	height: 60vw;
 	width: 60vw;
 	border-radius: 50%;
-	border: 10px solid var(--sand);
+	border: 16px solid rgba(255, 209, 69, 0.65);
 	transform: translate(-50%, -50%);
 	box-shadow: 0 0 8px rgba(10, 10, 10, 0.5),
 		inset 0 0 8px rgba(10, 10, 10, 0.5);
