--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,16 +75,16 @@ body {
 	height: 5px;
 	box-shadow: 0 0 2px rgba(10, 10, 10, 0.5);
 	border-radius: 5px;
-	transform-origin: 100%;
+	transform-origin: 97% 25%;
 	transform: rotateZ(90deg);
 }
 
 .hand-hour {
-	width: 40%;
+	width: 30%;
 }
 
 .hand-min {
-	width: 30%;
+	width: 40%;
 }
 
 .hand-sec {
