--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
 	height: 5px;
 	box-shadow: 0 0 2px rgba(10, 10, 10, 0.5);
 	border-radius: 5px;
-	transform-origin: 97% 25%;
+	transform-origin: 97%;
 	transform: rotateZ(90deg);
 }
 
